--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
-site_name: DevSecOps-pipeline
+site_name: 'DevSecOps-pipeline'
 nav:
-    - Introduction: 'index.md'
-    - Contents: 'contents.md'
-    - Setting up VM: 'setting-up-VM.md'
+- Introduction: 'index.md'
+- Contents: 'contents.md'
+- Setting up VM: 'setting-up-VM.md'
+
 theme: material
