--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,5 +3,7 @@ nav:
 - Introduction: 'index.md'
 - Contents: 'contents.md'
 - Setting up VM: 'setting-up-VM.md'
+- Setting up Jenkins: 'setting-up-jenkins.md'
+- Setting up mkDocs: 'setting-up-mkdocs.md'
 
 theme: material
