--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,8 +7,10 @@ nav:
 - Setting up mkDocs: 'setting-up-mkdocs.md'
 - Setting up pipeline: 'setting-up-pipeline.md'
 - Setting up DVNA: 'setting-up-dvna.md'
-- Source-Code-Quality-Analysis: 'Source-Code-Quality-Analysis.md'
-- SCA : 'SCA.md'
-- SAST: 'SAST.md'
-- Working-of-pipeline: 'Working-of-pipeline.md'
+- Static Analysis: 'SAST.md'
+- Software Composition Analysis: 'Software-Composition-Analysis.md'
+- Dynamic Analysis: 'DAST.md'
+- Source Code Quality Analysis: 'Source-Code-Quality-Analysis.md'
+- Complete Pipeline: 'Complete-pipeline.md'
+- Resources: 'Resources.md'
 theme: material
