--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ nav:
 - Introduction: 'index.md'
 - Contents: 'contents.md'
 - Problem Statements: 'Problem-statements'
-- Setting up VM: 'setting-up-VM.md'
+- Setting up VMs: 'setting-up-VM.md'
 - Setting up Jenkins: 'setting-up-jenkins.md'
 - Setting up mkDocs: 'setting-up-mkdocs.md'
 - Setting up pipeline: 'setting-up-pipeline.md'
