--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
 - Static Analysis: 'SAST.md'
 - Software Composition Analysis: 'software-composition-analysis.md'
 - Dynamic Analysis: 'DAST.md'
+- Generating Software Bill of Materials: 'SBoM.md'
 - Source Code Quality Analysis: 'Source-Code-Quality-Analysis.md'
 - Complete Pipeline  Structure: 'Complete-pipeline.md'
 - Resources: 'Resources.md'
