--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: 'DevSecOps-pipeline'
 nav:
 - Introduction: 'index.md'
 - Contents: 'contents.md'
-- Problem Statements: 'Problem-statements'
+- Problem Statement: 'Problem-statements'
 - Setting up VMs: 'setting-up-VM.md'
 - Setting up Jenkins: 'setting-up-jenkins.md'
 - Setting up mkDocs: 'setting-up-mkdocs.md'
